--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<h2>Type 2</h2>
+<h2>Yellow Fish 5</h2>
 <h2 class="major">First Para Here</h2>
 <p>This is the first para for testing this website, this is line two, this is another line, and this too, even this one, and don't forget this one which should be longer.</p>
 <a href="#" class="special">Read Tos</a>
 <h2 class="major">Second Para Here</h2>
 <p>This is the Second para for testing this website, this is line two, this is another line, and this too, even this one, and don't forget this one which should be longer.</p>
-<a href="#" class="special">Learn more</a>
+<a href="#" class="special">Read Privacy Policy</a>
 </body>
 </html>
