--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,10 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<h2>Yellow Fish 5</h2>
-<p>Privacy Policy.</p>
-<h2 class="major">Policy Here</h2>
-<p>This is the Policy para, it's for testing this website, this is line two, this is another line, and this too, even this one, and don't forget this one which should be longer.</p>
+<h5>Yellow Fish 5</h5>
+<h2 class="major">Privacy Policy</h2>
 <a href="https://unknown5mystery.github.io/YF5/" class="special">Go Back</a>
 </body>
 </html>
